# rainforest-lab

./: .gitignore  LICENSE  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
docs/: build_spec.md  concept.md
docs/superpowers/specs/: 2026-05-26-rainforest-agent-skill-design.md
examples/generic-research-cycle/: cycle-report.md  forest-state.yaml  seed-bank.yaml  weather-log.yaml
examples/quant-research-cycle/: cycle-report.md  forest-state.yaml  seed-bank.yaml  weather-log.yaml
python/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  pyproject.toml
python/examples/: bring_your_own_llm.py  quick_start.py  write_your_own_domain.py
python/rainforest_lab/: __init__.py  classify.py  cycle.py  deliberation.py  domain.py  errors.py  events.py  handoff.py  logging.py  roles.py  seeds.py  state.py  trajectories.py  validate.py  weather.py
python/rainforest_lab/domains/: demo.py
python/rainforest_lab/dsl/: evaluator.py  parser.py  random_formula.py  types.py
python/rainforest_lab/gates/: factor_gates.py  matched_random.py  profiles.py
python/rainforest_lab/llm/: builders.py  litellm_adapter.py  mocks.py  protocols.py
python/tests/: conftest.py  test_builders.py  test_classify.py  test_cycle_smoke.py  test_deliberation.py  test_domain.py  test_dsl_evaluator.py  test_dsl_parser.py  test_dsl_random.py  test_dsl_types.py  test_engine_facade.py  test_errors.py  test_events.py  test_factor_gates.py  test_gates_profiles.py  test_handoff.py  test_litellm_adapter.py  test_matched_random.py  test_protocols.py  test_roles.py  test_seeds.py  test_state.py  test_trajectories.py  test_v2_cycle_smoke.py  test_validate.py  test_weather.py
skills/rainforest-lab/: SKILL.md
tests/: test_rainforest_scripts.py
(+17 files in other folders)
