[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "rainforest-lab"
version = "0.1.0"
description = "Honest multi-agent research framework — engine + DSL/gates kits + LLM Protocols"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Rainforest Lab Contributors"}]
keywords = ["multi-agent", "research", "llm", "factor-mining", "agent-skill"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.5",
  "pyyaml>=6.0",
  "jsonschema>=4.20",
  "numpy>=1.26",
  "pandas>=2.1",
]

[project.optional-dependencies]
litellm = ["litellm>=1.40"]
dev = [
  "litellm>=1.40",
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "ruff>=0.5",
  "mypy>=1.10",
  "pandas-stubs>=2.1",
  "types-PyYAML>=6.0",
  "types-jsonschema>=4.20",
  "build>=1.0",
  "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/KrakenP/rainforest-lab"
Documentation = "https://github.com/KrakenP/rainforest-lab/tree/master/python"
Source = "https://github.com/KrakenP/rainforest-lab"
Issues = "https://github.com/KrakenP/rainforest-lab/issues"

[tool.hatch.build.targets.wheel]
packages = ["rainforest_lab"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["rainforest_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
